freesia/k8s/apps/freshrss/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  labels:
    app.kubernetes.io/name: freshrss
    app: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: freshrss
      app: freshrss
  template:
    metadata:
      labels:
        app.kubernetes.io/name: freshrss
        app: freshrss
    spec:
      containers:
      - name: freshrss
        image: freshrss/freshrss:1.21.0
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          initialDelaySeconds: 0
          periodSeconds: 5
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: freshrss-config
