freesia/k8s/apps/freshrss/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  # cert-manager.io/cluster-issuer: letsencrypt-prod
  name: freshrss
spec:
  ingressClassName: nginx
  rules:
  - host: rss.harvestasya.org
    http:
      paths:
      - backend:
          service:
            name: freshrss
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - rss.harvestasya.org
